<resources>
    <string name="app_name">MOROA3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="hjem">hjem</string>
    <string name="lige_nu">lige nu</string>
    <string name="gemte_events">Gemte events</string>
    <string name="menu">menu</string>
    <string name="find_event">Find event</string>
    <string name="tab_where">HVOR</string>
    <string name="tab_when">HVORNÅR</string>
    <string name="tab_what">HVAD</string>
    <string name="tab_show">SØG</string>
    <string name="om_os">OM OS</string>
    <string name="om_os_maintext">MORO er en ny kultur-platform for unge, der ønsker et skræddersyet overblik over oplevelser i det københavnske kulturliv. \n \nVores team består af 8 unge iværksættere, der tilsammen udgør MORO. Vi var trætte af altid at skulle lede gennem utallige sites og hjemmesider for at finde og udforske de events, der interesserer os. Vi oplevede, at vi tit gik glip af events, fordi vi ikke vidste, hvornår de blev afholdt, eller fordi vi først fik kendskab til dem, efter de var blevet afholdt. Vi savnede overblik og en platform, hvor man nemt og på overskuelig vis, kunne filtrere sin søgning og få optimeret information om lige præcis de events, vi gerne ville deltage i. Vi har derfor startet MORO. TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST </string>
    <string name="kontakt_os">KONTAKT OS</string>
    <string name="choose_Date">Vælg</string> <!--  TODO skal ændres -->
    <string name="tip_os">TIP OS</string>
    <string name="contactInfo">DINE KONTAKTOPLYSNINGER</string>
    <string name="titel_p_event">Titel</string>
    <string name="hvor">Hvor</string>
    <string name="beskrivelse">Beskrivelse</string>
    <string name="v_lg_dato">Hvornår</string>
    <string name="phoneContactInfo">Telefon</string>
    <string name="emailContactInfo">Email</string>
    <string name="link_til_event">Link</string>
    <string name="send">Send tip!</string>
    <string name="mad_og_drikke">Mad og drikke</string>
    <string name="sport_og_spil">Sport og spil</string>
    <string name="mode">Mode</string>
    <string name="fest">Fest</string>
    <string name="teater"><![CDATA[TEATER & \n FORESTIL- \n LINGER]]></string>
    <string name="gratis">Gratis</string>
    <string name="comedy">Comedy</string>
    <string name="talk">Talk</string>
    <string name="film">Film</string>
    <string name="koncert">Koncert</string>
    <string name="udstilling_og_kunst"><![CDATA[Udstilling \n og kunst]]></string>
    <string name="litteratur">Litteratur</string>
    <string name="Stemning">Stemning</string>
    <string name="TYPE">Type</string>
    <string name="loading">Loader...</string>
    <string name="Du_ikke_vil_hjem_men_videre"><![CDATA[DU IKKE \n VIL HJEM \n MEN VIDERE]]></string>
    <string name="Du_vil_ud_i_det_blå"><![CDATA[DU VIL UD I\n DET BLÅ]]></string>
    <string name="Du_har_tømmermænd"><![CDATA[DU HAR TØMMER- \n MÆND]]></string>
    <string name="Du_vil_udvide_din_horisont"><![CDATA[DU VIL \n UDIVDE DIN \n HORISONT]]></string>
    <string name="Du_har_tomme_lommer"><![CDATA[DU HAR \n TOMME \n LOMMER]]></string>
    <string name="Mad_gør_dig_glad"><![CDATA[MAD GØR \n DIG GLAD]]></string>
    <string name="Du_vil_forkæle_dig_selv"><![CDATA[DU VIL \n FORKÆLE \n DIG SELV]]></string>
    <string name="Du_vil_imponere_din_date"><![CDATA[DU VIL \n IMPONERE \n DIN DATE]]></string>
    <string name="De_gamle_kommer_på_besøg"><![CDATA[DE GAMLE \n KOMMER \n PÅ BESØG]]></string>
    <string name="Du_vil_have_gang_i_kroppen"><![CDATA[DU VIL \n HAVE GANG \n I KROPPEN]]></string>
    <string name="temp">Temp</string>
    <string name="Nørrebro">Nørrebro</string>
    <string name="Islands_brygge">ISLANDS BRYGGE</string>
    <string name="Indre_by">Indre by</string>
    <string name="Østerbro">Østerbro</string>
    <string name="Nordvest">Nordvest</string>
    <string name="Valby">Valby</string>
    <string name="Brønshøj_og_Husum"><![CDATA[Brønshøj & Husum]]></string>
    <string name="Amager">Amager</string>
    <string name="Vesterbro">Vesterbro</string>
    <string name="Vanløse">Vanløse</string>
    <string name="Christianshavn"><![CDATA[CHRISTIANS- \n HAVN]]></string>
    <string name="Refshaleøen"><![CDATA[REFSHALE- \n ØEN]]></string>

    <!-- STRING CONSTANTS - DE OFFICIELLE-->
    //zones
    <string name="ZONE_NORREBRO">NØRREBRO</string>;
    <string name="ZONE_VESTERBRO">VESTERBRO</string>;
    <string name="ZONE_OSTERBRO">ØSTERBRO</string>;
    <string name="ZONE_ISLANDS_BRYGGE">ISLANDS BRYGGE</string>;
    <string name="ZONE_INDRE_BY">INDRE BY</string>;
    <string name="ZONE_NORDVEST">NORDVEST</string>;
    <string name="ZONE_VALBY">VALBY</string>;
    <string name="ZONE_BRONSHOJ_OG_HUSUM">BRØSHØJ &amp; HUSUM</string>;
    <string name="ZONE_AMAGER">AMAGER</string>;
    <string name="ZONE_VANLOSE">VANLØSE</string>;
    <string name="ZONE_CHRISTIANSHAVN">CHRISTIANSHAVN</string>;
    <string name="ZONE_REFSHALEOEN">REFSHALEØEN</string>;
    //types
    <string name="TYPE_KONCERT">KONCERT</string>;
    <string name="TYPE_UDSTILLING_OG_KUNST">UDSTILLING &amp; KUNST</string>;
    <string name="TYPE_LITTERATUR">LITTERATUR</string>;
    <string name="TYPE_FILM">FILM</string>;
    <string name="TYPE_COMEDY">COMEDY</string>;
    <string name="TYPE_TALK">TALK</string>;
    <string name="TYPE_TEATER_OG_FORESTILLINGER">TEATER &amp; FORESTILLINGER</string>;
    <string name="TYPE_FEST">FEST</string>;
    <string name="TYPE_GRATIS">GRATIS</string>;
    <string name="TYPE_SPORT_OG_SPIL">SPORT &amp; SPIL</string>;
    <string name="TYPE_MAD_OG_DRIKKE">MAD &amp; DRIKKE</string>;
    <string name="TYPE_MODE">MODE</string>;
    //stemninger
    <string name="STEMNING_IKKE_HJEM">DU IKKE VIL HJEM MEN VIDERE</string>;
    <string name="STEMNING_UD_I_DET_BLA">DU VIL UD I DET BLÅ</string>;
    <string name="STEMNING_TOMMERMAND">DU HAR TØMMERMÆND</string>;
    <string name="STEMNING_UDVIDE_HORISONT">DU VIL UDVIDE DIN HORISONT</string>;
    <string name="STEMNING_TOMME_LOMMER">DU HAR TOMME LOMMER</string>;
    <string name="STEMNING_MAD_GLAD">MAD GØR DIG GLAD</string>;
    <string name="STEMNING_FORKALE_DIG_SELV">DU VIL FORKÆLE DIG SELV</string>;
    <string name="STEMNING_IMPONERE_DATE">DU VIL IMPONERE DIN DATE</string>;
    <string name="STEMNING_DE_GAMLE_BESOG">DE GAMLE KOMMER PÅ BESØG</string>;
    <string name="STEMNING_GANG_I_KROPPEN">DU VIL HAVE GANG I KROPPEN</string>
    <string name="price_free">Pris: Gratis</string>;

 </resources>