<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/yellowborder"
            android:gravity="center"
            android:tag="yellow"
            android:text="@string/Du_ikke_vil_hjem_men_videre"
            android:hint="@string/STEMNING_IKKE_HJEM"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/yellowborder"
            android:gravity="center"
            android:tag="yellow"
            android:text="@string/Du_vil_ud_i_det_blå"
            android:hint="@string/STEMNING_UD_I_DET_BLA"
            android:textColor="#000000"

            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/yellowborder"
            android:gravity="center"
            android:tag="yellow"
            android:text="@string/Du_har_tømmermænd"
            android:hint="@string/STEMNING_TOMMERMAND"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/yellowborder"
            android:gravity="center"
            android:tag="yellow"
            android:text="@string/Du_vil_udvide_din_horisont"
            android:hint="@string/STEMNING_UDVIDE_HORISONT"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/yellowborder"
            android:gravity="center"
            android:tag="yellow"
            android:text="@string/Du_har_tomme_lommer"
            android:hint="@string/STEMNING_TOMME_LOMMER"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/yellowborder"
            android:gravity="center"
            android:tag="yellow"
            android:text="@string/Mad_gør_dig_glad"
            android:hint="@string/STEMNING_MAD_GLAD"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/yellowborder"
            android:gravity="center"
            android:tag="yellow"
            android:text="@string/Du_vil_forkæle_dig_selv"
            android:hint="@string/STEMNING_FORKALE_DIG_SELV"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/yellowborder"
            android:gravity="center"
            android:tag="yellow"
            android:text="@string/Du_vil_imponere_din_date"
            android:hint="@string/STEMNING_IMPONERE_DATE"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/yellowborder"
            android:gravity="center"
            android:tag="yellow"
            android:text="@string/De_gamle_kommer_på_besøg"
            android:hint="@string/STEMNING_DE_GAMLE_BESOG"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/yellowborder"
            android:gravity="center"
            android:tag="yellow"
            android:text="@string/Du_vil_have_gang_i_kroppen"
            android:hint="@string/STEMNING_GANG_I_KROPPEN"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/yellowborder"
            android:gravity="center"
            android:tag="yellow"
            android:text="@string/temp"
            android:hint="@string/temp"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />


        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/yellowborder"
            android:gravity="center"
            android:tag="yellow"
            android:text="@string/temp"
            android:hint="@string/temp"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>


</LinearLayout>
