<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_tip_us"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/moroYellowBackground"
    tools:context=".burgermenu.TipUsFragment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tipOsHeadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/tip_os"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/eventTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20sp"
                android:layout_marginRight="20dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/titel_p_event"
                android:inputType="textPersonName"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/eventDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:autoText="true"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/beskrivelse"
                android:inputType="textPersonName"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/eventWhere"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/hvor"
                android:inputType="textPersonName"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/eventChooseDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:autofillHints=""
                android:focusable="false"
                android:hint="@string/v_lg_dato"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/eventLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/link_til_event"
                android:inputType="textPersonName"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/contactInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/contactInfo"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/phoneContactInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/phoneContactInfo"
                android:inputType="phone"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/emailContactInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/emailContactInfo"
                android:inputType="textEmailAddress"
                android:textAlignment="center" />



            <Button
                android:id="@+id/eventSendButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="60dp"
                android:text="@string/send"
                app:backgroundTint="@color/moroYellowButton"
                android:layout_marginBottom="400dp"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>