<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/yellowborder"
            android:gravity="center"
            android:tag="yellow"
            android:text="@string/TYPE_KONCERT"
            android:hint="@string/TYPE_KONCERT"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/yellowborder"
            android:gravity="center"
            android:tag="yellow"
            android:text="@string/TYPE_UDSTILLING_OG_KUNST"
            android:hint="@string/TYPE_UDSTILLING_OG_KUNST"
            android:textColor="#000000"
            android:textSize="21sp"

            android:textStyle="bold" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/yellowborder"
            android:gravity="center"
            android:tag="yellow"
            android:text="@string/TYPE_LITTERATUR"
            android:hint="@string/TYPE_LITTERATUR"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/yellowborder"
            android:gravity="center"
            android:tag="yellow"
            android:text="@string/TYPE_FILM"
            android:hint="@string/TYPE_FILM"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/yellowborder"
            android:gravity="center"
            android:tag="yellow"
            android:text="@string/comedy"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/yellowborder"
            android:gravity="center"
            android:tag="yellow"
            android:text="@string/TYPE_TALK"
            android:hint="@string/TYPE_TALK"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/yellowborder"
            android:gravity="center"
            android:tag="yellow"
            android:text="@string/teater"
            android:hint="@string/TYPE_TEATER_OG_FORESTILLINGER"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/yellowborder"
            android:gravity="center"
            android:tag="yellow"
            android:text="@string/TYPE_FEST"
            android:hint="@string/TYPE_FEST"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/yellowborder"
            android:gravity="center"
            android:tag="yellow"
            android:text="@string/TYPE_GRATIS"
            android:hint="@string/TYPE_GRATIS"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/yellowborder"
            android:gravity="center"
            android:tag="yellow"
            android:text="@string/TYPE_SPORT_OG_SPIL"
            android:hint="@string/TYPE_SPORT_OG_SPIL"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/yellowborder"
            android:gravity="center"
            android:tag="yellow"
            android:text="@string/TYPE_MAD_OG_DRIKKE"
            android:hint="@string/TYPE_MAD_OG_DRIKKE"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />


        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="0"
            android:background="@drawable/yellowborder"
            android:gravity="center"
            android:tag="yellow"
            android:text="@string/TYPE_MODE"
            android:hint="@string/TYPE_MODE"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>


</LinearLayout>
